--- a/src/styles/Teachr.css
+++ b/src/styles/Teachr.css
@@ -3,19 +3,21 @@
 }
 
 .main {
-  color: #2253a5;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  color: #2253a5;
+  margin-left: 250px;
   overflow: hidden;
 }
 
 .teachrs {
-  padding-top: 35px;
+  padding-top: 60px;
   margin-left: 85px;
   width: 100%;
+  height: 500px;
   display: flex;
   gap: 40px;
   overflow: auto;
@@ -47,6 +49,7 @@
 .Buttons {
   display: flex;
   gap: 60px;
+  margin-bottom: 15px;
 }
 
 .Buttons .btn_outline {
@@ -54,6 +57,7 @@
   background: none;
   font-size: 14px;
   color: darkslategray;
+  cursor: pointer;
 }
 
 .Buttons .btn {
@@ -66,4 +70,5 @@
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
+  cursor: pointer;
 }
